--- a/src/css/turin-basic.css
+++ b/src/css/turin-basic.css
@@ -38,19 +38,18 @@
 		position: relative; 
 		width: 100%; 
 	}
-
-	.container .column,        
-	.container .columns { 
+	.container .column,
+	.container .columns {
 		float: left;
-		width: 100%;  
+		width: 100%;
 	}
 
 	.row { margin-bottom: 2rem; }
 
-	.row .column:first-child,        
+	.row .column:first-child,
 	.row .columns:first-child { margin-left: 0 !important; }
 
-  
+
 	@media (min-width: 550px) {
 		.height-100{
 			height: 100vh;
@@ -95,6 +94,11 @@
 		.container .row .offset-by-one-half   { margin-left: 52%; }
 
 	}
+@media (max-width: 600px){
+	.container{
+		padding: 0 35px;
+	}
+}
 
 
 /* Base Styles
@@ -976,8 +980,8 @@
 	.row:after,
 	.u-cf { 
 		clear: both; 
-		content: ""; 
-		display: table; 
+		/*content: ""; */
+		display: table;
 	}
 
 
