before video bg change

--- a/src/css/turin-color.css
+++ b/src/css/turin-color.css
@@ -450,7 +450,7 @@
 	================================================== */	
 
 		section.landing .border {
-			border-color: rgba(255,255,255,0.25);
+			border-color: rgba(255, 255, 255, 0.3);
 		}
 
 	/* Portfolio
